monitoring/services/kibana/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kibana-logging-depoyment
  namespace: monitoring
  labels:
    app: kibana-logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana-logging
  template:
    metadata:
      labels:
        app: kibana-logging
    spec:
      containers:
      - name: kibana-logging
        image: docker.elastic.co/kibana/kibana:5.6.4
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
