monitoring/services/kibana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: monitoring
  labels:
    app: kibana-logging
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
  selector:
    app: kibana-logging
